# pyLSTemp

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS.md  GITHUB_UPLOAD_CHECKLIST.md  PROJECT_CONTEXT_BACKUP.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/: PROJECT_CONTEXT_BACKUP.md  api-reference.md  architecture.md  extending.md  index.md  installation.md  references.md  usage.md
exemples/: DATA.md  brightness.ipynb  emissivity.ipynb  pylstemp_v1_7_usage_examples.ipynb  single_window.ipynb  spectral_index.ipynb  split_window.ipynb  water_vapor.ipynb
pylstemp/: __init__.py  api.py  exceptions.py  metadata.py  references.py  registry.py  utils.py  validation.py
pylstemp/algorithms/: __init__.py  base_temperature.py
pylstemp/algorithms/emissivity/: __init__.py  avdan.py  avdan_2016.py  (+5 more)
pylstemp/sensors/: Untitled-1.ipynb  __init__.py  landsat.py
src/pylstemp/: __init__.py  api.py  exceptions.py  references.py  utils.py
tests/: test_algorithms.py  test_api.py  test_credits.py  test_domains.py  test_registry.py  test_validation.py
tests/__pycache__/: conftest.cpython-313-pytest-9.0.3.pyc.47464  test_algorithms.cpython-313-pytest-9.0.3.pyc.47464  test_api.cpython-313-pytest-9.0.3.pyc.47464  test_credits.cpython-313-pytest-9.0.3.pyc.47464  test_domains.cpython-313-pytest-9.0.3.pyc.47464  test_registry.cpython-313-pytest-9.0.3.pyc.47464  test_validation.cpython-313-pytest-9.0.3.pyc.47464
tutorial/: README.md
(+82 files in other folders)
