[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pylstemp"
version = "1.4.0"
description = "Professional Python library for land surface temperature workflows from Landsat imagery."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [
  { name = "Original library by Oladimeji Mudele" },
  { name = "pyLSTemp maintainers" }
]
keywords = ["landsat", "remote-sensing", "temperature", "emissivity", "ndvi"]
dependencies = ["numpy>=1.24"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: GIS",
  "Topic :: Scientific/Engineering :: Image Processing",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[tool.setuptools.packages.find]
include = ["pylstemp*"]

[project.urls]
Homepage = "https://github.com/daciocambraia/pyLSTemp"
Repository = "https://github.com/daciocambraia/pyLSTemp"
Issues = "https://github.com/daciocambraia/pyLSTemp/issues"
Documentation = "https://github.com/daciocambraia/pyLSTemp/tree/main/docs"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -p no:cacheprovider"
